[workspace]
members = [
	".",
	"codegen",
]

[package]
name = "xylem"
version = "0.2.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SOF3/xylem"
homepage = "https://github.com/SOF3/xylem"
readme = "README.md"
description = "Building context-sensitive type conversion"

[dependencies]
anyhow = {version = "1.0.45", optional = true}
lazy_static = "1.4.0"
serde = {version = "1.0.130", features = ["derive"], optional = true} # derive required in `id` and `codegen`
typemap = {version = "0.3.3", optional = true}
xylem-codegen = {version = "0.1.0", path = "./codegen"}

[features]
default = ["id", "ext", "typemap", "anyhow"]
id = []
ext = []

[dev-dependencies]
anyhow = "1.0.45"
