[package]
name = "xylem-codegen"
version = "0.2.7"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SOF3/xylem"
homepage = "https://github.com/SOF3/xylem"
readme = "../README.md"
description = "Codegen backend for xylem"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.32"
quote = "1.0.10"
syn = {version = "2.0.4", features = ["parsing", "full"]}
